Fri Jun 21 00:37:31 2013  Tanaka Akira  <akr@fsij.org>

	* ext/bigdecimal: Workaround fix for bigdecimal test failures caused
	  by [ruby-dev:47413] [Feature #8509]

	* ext/bigdecimal/bigdecimal.h (BDIGIT): Make it independent from the
	  definition for bignum.c.
	  (SIZEOF_BDIGITS): Ditto.
	  (BDIGIT_DBL): Ditto.
	  (BDIGIT_DBL_SIGNED): Ditto.
	  (PRI_BDIGIT_PREFIX): Undefine the definition.
	  (PRI_BDIGIT_DBL_PREFIX): Ditto.

	* ext/bigdecimal/bigdecimal.c (RBIGNUM_ZERO_P): Use rb_bigzero_p.
	  (bigzero_p): Removed.
	  (is_even): Use rb_big_pack.

Thu Jun 20 22:52:42 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigmul1_toom3): Don't call bignorm twice.

Thu Jun 20 22:49:27 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bignorm): Don't call bigtrunc if the result is a fixnum.

Thu Jun 20 22:29:42 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_uint2big): Refactored.

Thu Jun 20 22:24:41 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (dump_bignum): Use SIZEOF_BDIGITS.

Thu Jun 20 22:22:46 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big2ulong): Change the return type to unsigned long.
	  (rb_big2ulong_pack): Follow the above change.
	  (rb_big2long): Ditto.
	  (rb_big_lshift): Ditto.
	  (rb_big_rshift): Ditto.
	  (rb_big_aref): Ditto.

Thu Jun 20 22:02:46 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_unpack_internal): Return -2 when negative overflow.
	  (bary_unpack): Set the overflowed bit if an extra BDIGIT exists.
	  (rb_integer_unpack): Set the overflowed bit.

Thu Jun 20 21:17:19 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rgengc_rememberset_mark): record
	  (1) normal objects count in remember set
	  (2) shady objects count in remember set
	  each GC timing.

	* gc.c (gc_profile_record_get): enable to access above information
	  and REMOVING_OBJECTS, EMPTY_OBJECTS.

Thu Jun 20 18:29:26 2013  Koichi Sasada  <ko1@atdot.net>

	* benchmark/gc/gcbench.rb: Do not use GC::Profiler::disable because